--- a/前端/evanwebfrontend/src/assets/css/global.css
+++ b/前端/evanwebfrontend/src/assets/css/global.css
@@ -7,3 +7,13 @@ html,body,#app{
 #app{
     display: flex;
 }
+.el-breadcrumb{
+    margin-bottom: 20px;
+}
+.el-card{
+    box-shadow:0 1px 1px rgb(0, 0, 0,0.15)!important;
+}
+
+.el-pagination{
+    margin-top: 10px;
+}
